# aseprite-wal

./: .gitignore  CMakeLists.txt  README.md
include/aseprite_wal/: image.hpp  pywal.hpp  theme.hpp
src/: image.cc  main.cc  pywal.cc  theme.cc
templates/light/: package.json  theme.xml
